adjust web layout

--- a/src/WebUI/Views/Home/Index.cshtml
+++ b/src/WebUI/Views/Home/Index.cshtml
@@ -3,8 +3,6 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
-<div>
-    <p>This is HomePage</p>
-</div>
+<h1>This is Home Page</h1>
 
+<p>Find me in ~/Views/Home/Index.cshtml</p>
